kube/mongo.yml
#apiVersion: v1
#kind: Pod
#metadata:
#  name: mongo
#  labels:
#    app: mongo
#spec:
#  containers:
#    - name: mongo
#      image: mongo
#      ports:
#        - name: mongo-port
#          containerPort: 27017

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
              name: mongo-port
