kube/rabbit.yml
#apiVersion: v1
#kind: Pod
#metadata:
#  name: rabbit
#  labels:
#    app: rabbit
#spec:
#  containers:
#    - name: rabbitmq
#      image: rabbitmq:management
#      ports:
#        - name: rabbit-port
#          containerPort: 5672

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbit
    spec:
      containers:
        - name: rabbit
          image: rabbitmq:management
          ports:
            - containerPort: 5672
              name: port-5672
