kube/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  ports:
    - port: 27017
      nodePort: 27017
      targetPort: mongo-port
      protocol: TCP
  selector:
    app: mongo
  type: NodePort
