kube/rabbit-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-service
spec:
  ports:
    - port: 5672
      nodePort: 5672
      targetPort: port-5672
      protocol: TCP
  selector:
    app: rabbit
  type: NodePort
