kube/translation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: translation-service
  labels:
    app: translation-service
spec:
  ports:
    - port: 8082
      nodePort: 8082
      targetPort: t-port
      protocol: TCP
  selector:
    app: translation
  type: NodePort
