kube/app-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: heroes-service.default.svc.cluster.local
            subset: v1
            port:
              number: 8081
